nova_tests/plan103_2/negative/atomic_i64_no_such_method_neg.nv
// Plan 103.2 Ф.9 negative — non-existent instance method on AtomicI64.
//
// EXPECT_CC_ERROR no member named 'no_such_op'
//
// `a.no_such_op()` on AtomicI64 → codegen emits a member access of
// `no_such_op` on the `Nova_AtomicI64` struct → clang error:
// "no member named 'no_such_op' in 'Nova_AtomicI64'".
// Verifies that unknown instance methods are caught at C compile time.

module nova_tests.plan103_2.negative.atomic_i64_no_such_method_neg

fn bad() -> int {
    mut a = AtomicI64.new(0)
    a.no_such_op()
}

test "should not compile" {
    ro _ = bad()
    assert(true)
}
